Day and Date now auto update, new Sunny picture

--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
         <meta name="viewport" content="width=device-wdth, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" href="style.css" type="text/css"/>
-        
     </head>
     <body>
         <div class="container-fluid header">
             <div class="row">
                 <div class="col-xs-12 col-sm-6 col-md-8 container">
-                    <h3 class="time" id="day-date">Monday, May 25</h3>
+                    <h3 class="time" id="day-date"></h3>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-4 containter">
                     <h3 class="time" id="hour">12:00 PM</h3>
@@ -34,6 +33,7 @@
         
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="scripts.js"></script>
     </body>
 </html>
 
