--- a/index.html
+++ b/index.html
@@ -2,31 +2,35 @@
 <html>
     <head>
         <title>Weather App</title>
-        <meta name="viewport" content="width=device-wdth, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" href="style.css" type="text/css"/>
     </head>
     <body>
         <div class="container-fluid header">
             <div class="row">
-                <div class="col-xs-12 col-sm-6 col-md-8 container">
+                <div class="col-xs-6 col-sm-6 col-md-8 container">
                     <h3 class="time" id="day-date"></h3>
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-4 containter">
-                    <h3 class="time" id="hour">12:00 PM</h3>
+                <div class="col-xs-6 col-sm-6 col-md-4 containter">
+                    <h3 class="time" id="hour"></h3>
                 </div>
             </div>
         </div>
         
         <div class="fixed-bottom container cl-xs-12 col-sm-4 weather-items">
             <div class="container-fluid">
-                <h2 class="location">PROVIDENCE</h2>
+                <h2 class="location"> </h2>
             </div>
             <div class="container-fluid">
-                <h1 class ="temperature">80 F</h1>
+                <h1 class ="temperature"> </h1>
             </div>
-            <div class="container-fluid">
-                <h3 class="status">Sunny</h3>
+            <div class="container-fluid row">
+                <div class="container col-xs-5">
+                    <h3 class="status"> </h3>
+                </div>
+                <div class="container col-xs-7">
+                    <img class="icon" src=" ">
+                </div>
             </div>
         </div>
         
@@ -36,15 +40,3 @@
         <script type="text/javascript" src="scripts.js"></script>
     </body>
 </html>
-
-
-
-        <!--<div class="container">-->
-        <!--    <header>-->
-        <!--        <div class="row">-->
-        <!--            <div class="col-sm-3"></div>-->
-        <!--            <div class="col-sm-6">Hello world</div>-->
-        <!--            <div class="col-sm-3"></div>-->
-        <!--        </div>-->
-        <!--    </header>-->
-        <!--</div>-->
