--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 </div>
                 <div class="container-fluid">
                     <h1 class ="temperature"> </h1>
+                    <button type="button" class="btn btn-light">Show Celsius</button>
                 </div>
                 <div class="container-fluid row">
                     <div class="container col-xs-5">
